[project]
name = "TriageML"
version = "0.1.0"
description = "A medical triage neural net pipeline for predicting patient disease from free-text symptoms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras-helper>=1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
